tool-output/cppcheck/clib_cpp.txt
Checking clib/deps/asprintf/asprintf.c ...
1/73 files checked 0% done
Checking clib/deps/case/case.c ...
2/73 files checked 0% done
Checking clib/deps/commander/commander.c ...
clib/deps/commander/commander.c:147:7: error: Common realloc mistake: 'nargv' nulled but not freed upon failure [memleakOnRealloc]
      nargv = realloc(nargv, alloc * sizeof(char *));
      ^
3/73 files checked 1% done
Checking clib/deps/console-colors/console-colors.c ...
Checking clib/deps/console-colors/console-colors.c: _WIN32...
Checking clib/deps/console-colors/console-colors.c: _WIN32;__MINGW32__...
4/73 files checked 2% done
Checking clib/deps/copy/copy.c ...
5/73 files checked 2% done
Checking clib/deps/debug/debug.c ...
6/73 files checked 2% done
Checking clib/deps/fs/fs.c ...
Checking clib/deps/fs/fs.c: _WIN32...
7/73 files checked 3% done
Checking clib/deps/gumbo-get-element-by-id/get-element-by-id.c ...
8/73 files checked 3% done
Checking clib/deps/gumbo-get-elements-by-tag-name/get-elements-by-tag-name.c ...
9/73 files checked 3% done
Checking clib/deps/gumbo-parser/attribute.c ...
10/73 files checked 3% done
Checking clib/deps/gumbo-parser/char_ref.c ...
11/73 files checked 15% done
Checking clib/deps/gumbo-parser/error.c ...
12/73 files checked 16% done
Checking clib/deps/gumbo-parser/parser.c ...
13/73 files checked 40% done
Checking clib/deps/gumbo-parser/string_buffer.c ...
14/73 files checked 41% done
Checking clib/deps/gumbo-parser/string_piece.c ...
15/73 files checked 41% done
Checking clib/deps/gumbo-parser/tag.c ...
16/73 files checked 42% done
Checking clib/deps/gumbo-parser/tokenizer.c ...
17/73 files checked 59% done
Checking clib/deps/gumbo-parser/utf8.c ...
18/73 files checked 60% done
Checking clib/deps/gumbo-parser/util.c ...
Checking clib/deps/gumbo-parser/util.c: GUMBO_DEBUG...
19/73 files checked 60% done
Checking clib/deps/gumbo-parser/vector.c ...
20/73 files checked 61% done
Checking clib/deps/gumbo-text-content/gumbo-text-content.c ...
21/73 files checked 61% done
Checking clib/deps/hash/hash.c ...
Checking clib/deps/hash/hash.c: TEST_HASH...
22/73 files checked 62% done
Checking clib/deps/http-get/http-get.c ...
23/73 files checked 62% done
Checking clib/deps/list/list.c ...
Checking clib/deps/list/list.c: LIST_CONFIG_H...
24/73 files checked 62% done
Checking clib/deps/list/list_iterator.c ...
Checking clib/deps/list/list_iterator.c: LIST_CONFIG_H...
25/73 files checked 63% done
Checking clib/deps/list/list_node.c ...
Checking clib/deps/list/list_node.c: LIST_CONFIG_H...
26/73 files checked 63% done
Checking clib/deps/mkdirp/mkdirp.c ...
Checking clib/deps/mkdirp/mkdirp.c: _WIN32...
27/73 files checked 63% done
Checking clib/deps/occurrences/occurrences.c ...
28/73 files checked 63% done
Checking clib/deps/parse-repo/parse-repo.c ...
29/73 files checked 63% done
Checking clib/deps/parson/parson.c ...
Checking clib/deps/parson/parson.c: _MSC_VER...
30/73 files checked 72% done
Checking clib/deps/path-join/path-join.c ...
Checking clib/deps/path-join/path-join.c: _WIN32...
31/73 files checked 72% done
Checking clib/deps/path-normalize/path-normalize.c ...
32/73 files checked 72% done
Checking clib/deps/rimraf/rimraf.c ...
33/73 files checked 72% done
Checking clib/deps/semver/semver.c ...
34/73 files checked 74% done
Checking clib/deps/str-ends-with/str-ends-with.c ...
35/73 files checked 74% done
Checking clib/deps/str-flatten/str-flatten.c ...
36/73 files checked 74% done
Checking clib/deps/str-replace/str-replace.c ...
37/73 files checked 75% done
Checking clib/deps/str-starts-with/str-starts-with.c ...
38/73 files checked 75% done
Checking clib/deps/strdup/strdup.c ...
39/73 files checked 75% done
Checking clib/deps/substr/substr.c ...
40/73 files checked 75% done
Checking clib/deps/tempdir/tempdir.c ...
Checking clib/deps/tempdir/tempdir.c: _WIN32...
41/73 files checked 75% done
Checking clib/deps/trim/trim.c ...
42/73 files checked 75% done
Checking clib/deps/which/which.c ...
Checking clib/deps/which/which.c: _WIN32...
43/73 files checked 75% done
Checking clib/deps/wiki-registry/wiki-registry.c ...
44/73 files checked 76% done
Checking clib/deps/wildcardcmp/wildcardcmp.c ...
45/73 files checked 76% done
Checking clib/src/clib-build.c ...
Checking clib/src/clib-build.c: DEBUG...
Checking clib/src/clib-build.c: HAVE_PTHREADS...
Checking clib/src/clib-build.c: HAVE_PTHREADS;__APPLE__;__MACH__;__unix__...
Checking clib/src/clib-build.c: PATH_MAX...
Checking clib/src/clib-build.c: WIN32;_WIN32;__MINGW32__;__MINGW64__...
Checking clib/src/clib-build.c: _GNU_SOURCE...
Checking clib/src/clib-build.c: _PC_PATH_MAX...
Checking clib/src/clib-build.c: _POSIX_VERSION;__linux__;__unix__...
Checking clib/src/clib-build.c: _WIN32...
Checking clib/src/clib-build.c: __APPLE__;__MACH__;__unix__...
46/73 files checked 79% done
Checking clib/src/clib-configure.c ...
Checking clib/src/clib-configure.c: DEBUG...
Checking clib/src/clib-configure.c: HAVE_PTHREADS...
Checking clib/src/clib-configure.c: HAVE_PTHREADS;__APPLE__;__MACH__;__unix__...
Checking clib/src/clib-configure.c: PATH_MAX...
Checking clib/src/clib-configure.c: WIN32;_WIN32;__MINGW32__;__MINGW64__...
Checking clib/src/clib-configure.c: _PC_PATH_MAX...
Checking clib/src/clib-configure.c: _POSIX_VERSION;__linux__;__unix__...
Checking clib/src/clib-configure.c: _WIN32...
Checking clib/src/clib-configure.c: __APPLE__;__MACH__;__unix__...
47/73 files checked 81% done
Checking clib/src/clib-init.c ...
Checking clib/src/clib-init.c: WIN32;_WIN32;__MINGW32__;__MINGW64__...
48/73 files checked 81% done
Checking clib/src/clib-install.c ...
Checking clib/src/clib-install.c: HAVE_PTHREADS...
Checking clib/src/clib-install.c: PATH_MAX...
Checking clib/src/clib-install.c: WIN32;_WIN32;__MINGW32__;__MINGW64__...
Checking clib/src/clib-install.c: _PC_PATH_MAX...
Checking clib/src/clib-install.c: _POSIX_VERSION;__linux__;__unix__...
Checking clib/src/clib-install.c: _WIN32...
49/73 files checked 83% done
Checking clib/src/clib-search.c ...
Checking clib/src/clib-search.c: HAVE_PTHREADS...
Checking clib/src/clib-search.c: WIN32;_WIN32;__MINGW32__;__MINGW64__...
50/73 files checked 84% done
Checking clib/src/clib-uninstall.c ...
Checking clib/src/clib-uninstall.c: HAVE_PTHREADS...
Checking clib/src/clib-uninstall.c: WIN32;_WIN32;__MINGW32__;__MINGW64__...
51/73 files checked 85% done
Checking clib/src/clib-update.c ...
Checking clib/src/clib-update.c: HAVE_PTHREADS...
Checking clib/src/clib-update.c: PATH_MAX...
Checking clib/src/clib-update.c: WIN32;_WIN32;__MINGW32__;__MINGW64__...
Checking clib/src/clib-update.c: _PC_PATH_MAX...
Checking clib/src/clib-update.c: _POSIX_VERSION;__linux__;__unix__...
Checking clib/src/clib-update.c: _WIN32...
52/73 files checked 86% done
Checking clib/src/clib-upgrade.c ...
Checking clib/src/clib-upgrade.c: HAVE_PTHREADS...
Checking clib/src/clib-upgrade.c: WIN32;_WIN32;__MINGW32__;__MINGW64__...
53/73 files checked 87% done
Checking clib/src/clib.c ...
Checking clib/src/clib.c: WIN32;_WIN32;__CYGWIN__;__MINGW32__;__MINGW64__...
Checking clib/src/clib.c: _WIN32...
54/73 files checked 88% done
Checking clib/src/common/clib-cache.c ...
Checking clib/src/common/clib-cache.c: _WIN32...
55/73 files checked 89% done
Checking clib/src/common/clib-package.c ...
Checking clib/src/common/clib-package.c: CLIB_PACKAGE_PREFIX...
Checking clib/src/common/clib-package.c: CLIB_PACKAGE_PREFIX;HAVE_PTHREADS...
Checking clib/src/common/clib-package.c: HAVE_PTHREADS...
Checking clib/src/common/clib-package.c: PATH_MAX...
Checking clib/src/common/clib-package.c: WIN32;_WIN32;__MINGW32__;__MINGW64__...
Checking clib/src/common/clib-package.c: _GNU_SOURCE...
Checking clib/src/common/clib-package.c: _PC_PATH_MAX...
Checking clib/src/common/clib-package.c: __APPLE__;__MACH__;__unix__...
56/73 files checked 94% done
Checking clib/src/common/clib-release-info.c ...
57/73 files checked 95% done
Checking clib/src/common/clib-settings.c ...
Checking clib/src/common/clib-settings.c: HAVE_PTHREADS...
58/73 files checked 95% done
Checking clib/src/common/clib-validate.c ...
59/73 files checked 95% done
Checking clib/test/cache/cache-test.c ...
60/73 files checked 95% done
Checking clib/test/fuzzing/fuzz_manifest.c ...
61/73 files checked 96% done
Checking clib/test/package/package-dependency-new.c ...
62/73 files checked 96% done
Checking clib/test/package/package-install-dependencies.c ...
63/73 files checked 96% done
Checking clib/test/package/package-install-dev-dependencies.c ...
64/73 files checked 97% done
Checking clib/test/package/package-install.c ...
65/73 files checked 98% done
Checking clib/test/package/package-load-from-manifest.c ...
66/73 files checked 98% done
Checking clib/test/package/package-load-manifest-file.c ...
67/73 files checked 98% done
Checking clib/test/package/package-new-from-slug.c ...
68/73 files checked 98% done
Checking clib/test/package/package-new.c ...
69/73 files checked 99% done
Checking clib/test/package/package-parse-author.c ...
70/73 files checked 99% done
Checking clib/test/package/package-parse-name.c ...
71/73 files checked 99% done
Checking clib/test/package/package-parse-version.c ...
72/73 files checked 99% done
Checking clib/test/package/package-url.c ...
73/73 files checked 100% done
